--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sonner": "1.4.41",
+    "sweetalert2": "^11.22.0",
+    "sweetalert2-react-content": "^5.1.0",
     "tailwind-merge": "2.2.2",
     "xlsx": "0.18.5"
   },
