--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
     "lucide-react": "^0.378.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
-    "sonner": "^1.4.41",
-    "sweetalert2": "^11.10.8",
-    "sweetalert2-react-content": "^5.0.7",
+    "react-router-dom": "^7.6.2",
+    "sonner": "^1.7.4",
+    "sweetalert2": "^11.22.0",
+    "sweetalert2-react-content": "^5.1.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
