--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "moztech-shipment-verification-system",
+  "name": "moztech-wms-final",
   "private": true,
   "version": "1.0.0",
   "type": "module",
@@ -10,16 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.9.0",
-    "chart.js": "^4.4.9",
-    "lucide-react": "^0.378.0",
+    "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
+    "lucide-react": "^0.395.0",
     "react": "^18.2.0",
-    "react-chartjs-2": "^5.3.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.6.2",
-    "sonner": "^1.7.4",
-    "sweetalert2": "^11.22.0",
-    "sweetalert2-react-content": "^5.1.0",
+    "react-router-dom": "^6.23.1",
+    "sonner": "^1.4.41",
+    "sweetalert2": "^11.10.8",
+    "sweetalert2-react-content": "^5.0.7",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
