--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.395.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
     "sonner": "^1.4.41",
