--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-datepicker": "^8.7.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.4.41",
     "sweetalert2": "^11.10.8",
     "sweetalert2-react-content": "^5.0.7",
