feat: 後端模組化重構 + Jest測試框架
🏗️ 模組化架構：
- 建立 src/ 目錄結構（config, middleware, routes, services, utils）
- 分層設計：路由層 → 服務層 → 資料層
- 單一職責原則：每個模組專注特定功能

📁 新增模組：
config/
  - database.js: 資料庫連接池配置with事件監聽
middleware/
  - auth.js: authenticateToken, authorizeAdmin, authorizeRoles
  - errorHandler.js: 404處理, 全局錯誤處理, async包裝器
routes/
  - authRoutes.js: 登入、Token刷新路由
  - userRoutes.js: 用戶CRUD完整路由
services/
  - authService.js: 登入邏輯、Token驗證
  - userService.js: 用戶管理業務邏輯

🧪 Jest 測試框架：
- jest.config.js: 完整配置with覆蓋率閾值
- auth.test.js: 認證服務測試（登入、Token驗證）
- user.test.js: 用戶服務測試（CRUD操作）
- 使用 Mock 模擬資料庫
- 覆蓋率目標：50%以上

🚀 啟動配置：
- src/app.js: Express應用配置
- src/server.js: 伺服器啟動with優雅關閉
- package.json更新：新增 start:new, dev:new, test腳本

📝 文件：
- src/README.md: 完整架構說明和遷移指南

🔧 改進：
- 環境感知日誌系統
- 資料庫連接池管理
- 統一錯誤處理
- 更好的代碼組織

⚠️ 注意：
- 舊的 index.js 保留作為參考
- 新舊系統並存，逐步遷移
- 使用 npm run start:new 啟動新版本

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,24 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "moztech-wms-backend",
+  "version": "7.0.0",
+  "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "start:new": "node src/server.js",
+    "dev": "nodemon index.js",
+    "dev:new": "nodemon src/server.js",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch",
+    "migrate": "node migrations/run.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "wms",
+    "warehouse",
+    "inventory"
+  ],
+  "author": "MOZTECH",
   "license": "ISC",
-  "description": "",
+  "description": "MOZTECH 倉儲管理系統後端 API",
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
@@ -24,5 +33,10 @@
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "xlsx": "^0.18.5"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.11",
+    "supertest": "^6.3.4"
   }
 }
