--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@zxing/library": "^0.21.3",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "date-fns": "^4.1.0",
@@ -19,6 +20,7 @@
     "react-datepicker": "^8.7.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.1",
+    "react-to-print": "^3.2.0",
     "socket.io-client": "^4.8.1",
     "sonner": "^1.4.41",
     "sweetalert2": "^11.10.8",
