--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "moztech-shipment-verification-system",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "test-api": "node test-api.js",
+    "migrate:add-priority": "node scripts/run-migration.js"
+  },
   "dependencies": {
     "express-async-errors": "^3.1.1",
     "helmet": "^8.1.0",
