--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-datepicker": "^8.7.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.1",
+    "react-window": "^1.8.10",
     "react-to-print": "^3.2.0",
     "socket.io-client": "^4.8.1",
     "sonner": "^1.4.41",
