--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "react-datepicker": "^8.7.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.1",
+    "@tanstack/react-query": "^5.56.2",
+    "@sentry/react": "^7.114.0",
     "react-window": "^1.8.10",
     "react-to-print": "^3.2.0",
     "socket.io-client": "^4.8.1",
