chore(maintenance): add retention:prod script for SSL-enabled runs

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
     "test:watch": "jest --watch",
     "migrate": "node migrations/run.js",
     "migrate:single": "node migrations/run-single.js",
-    "retention": "node src/maintenance/retention.js"
+    "retention": "node src/maintenance/retention.js",
+    "retention:prod": "NODE_ENV=production node src/maintenance/retention.js"
   },
   "keywords": [
     "wms",
