--- a/backend/package.json
+++ b/backend/package.json
@@ -3,10 +3,10 @@
   "version": "7.0.0",
   "main": "src/server.js",
   "scripts": {
-    "start": "node index.js",
-    "start:new": "node src/server.js",
-    "dev": "nodemon index.js",
-    "dev:new": "nodemon src/server.js",
+    "start": "node src/server.js",
+    "start:legacy": "node index.js",
+    "dev": "nodemon src/server.js",
+    "dev:legacy": "nodemon index.js",
     "test": "jest --coverage",
     "test:watch": "jest --watch",
     "migrate": "node migrations/run.js",
